# ai-tutor

./: .dockerignore  .gitignore  AGENTS.md  Caddy.Dockerfile  Dockerfile  Makefile  README.md  alembic.ini  compose.mailpit.yaml  compose.prod.yaml  compose.yaml  config.toml  default_config.toml  pyproject.toml  requirements.txt  rxconfig.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  technical_task.yml
.github/workflows/: docker.yml  lint.yml  test.yml
.web/: package.json  reflex.json
aitandem/: aitandem.py  auth_session.py  base_state.py  models.py  openai_state.py
aitandem/components/: __init__.py  base_layout.py  error_box.py  login_window.py  user_roles.py
aitandem/pages/: __init__.py  add_excercises.py  chat.py  exercises.py  home.py  login.py  profile.py  registration.py  sidebar.py  student_dashboard.py  teacher_dashboard.py
aitandem/states/: __init__.py  dialog_state.py
aitandem/tests/: test_models.py
aitutor/: __init__.py  account_emails.py  aitutor.py  app_settings.py  auth_session.py  base_state.py  config.py  global_vars.py  language_state.py  mail.py  models.py  routes.py
aitutor/auth/: __init__.py  forms.py  models.py  pages.py  protection.py  state.py
aitutor/beta_ai/: __init__.py  audit.py  concept_generation.py  diagnosis.py  policy.py  schemas.py  student_state.py  tutor_turn.py
aitutor/components/: __init__.py  dialogs.py  error_box.py  user_roles.py
aitutor/pages/: __init__.py  add_excercises.py  chat.py  chat_old.py  exercises.py  finished_view.py  home.py  login.py  manage_excercises.py  navbar.py  navbar_admin.py  navbar_beta_ai.py  navbar_lectures.py  navbar_links.py  navbar_profile.py  navbar_specific_lecture.py  not_found.py  profile.py  registration.py  sidebar.py  student_dashboard.py
aitutor/states/: __init__.py  config_state.py
aitutor/tests/: test_models.py
aitutor/utilities/: create_admin_user.py  create_default_users.py  filtering_components.py  helper_functions.py  lecture_permissions.py  parser.py  role_check.py
alembic/versions/: 04b7429deb72_.py  0c927ae41592_set_exercise_id_to_null_when_exercise_.py  0cb56d22ab40_.py  0f247860a023_.py  13978d7d4420_rename_userrole_teacher_tutor.py  19401e204929_.py  1fe016694cca_.py  262d70817c64_.py  28b4764b10e9_.py  2b9639533bf3_.py  2bb24f0c0869_.py  2ec3a5b6e9c0_.py  2eff6b4c1532_.py  3589aca3eafb_.py  38ab9eec608b_.py  3b0b6e3d4ef4_.py  3b1567ad9091_.py  3f64fa52aa84_.py  45d62ec800d7_.py  472b6c5cdb6b_.py  47505b705585_.py  48fd40e2c517_.py  4d41b672bb0b_.py  4f7197e7ac5d_.py  4fc3b8f7ceb5_fix_report_exercise_id_foreign_key.py  4fd21c245fcd_.py  4fd9d759d0f7_.py  58834e03684f_.py  5c9383ae2ef1_.py  5dcadaff512f_.py  5f9b77ea8c17_.py  623f65850927_.py  6357fc1e0bd7_.py  64ec1d74ee13_.py  69ed9eeebd33_.py  6a026486ef4f_.py  7d4104f6fd42_.py  821fd6ad778b_.py  8490aa906c5e_.py  8851001f41b5_set_exercise_id_to_null_when_exercise_.py  (+35 more)
assets/: styles.css
docs/: architecture.md  configfile.md  contribute.md  docker.md
myvenv/: pyvenv.cfg
myvenv/Scripts/: activate  activate.bat
reflex.lock/: package.json
scripts/: evaluate_beta_ai_thresholds.py  simulate_beta_ai_exercise.py
skills/ai-tutor-implementation/: SKILL.md
skills/ai-tutor-review/: SKILL.md
teamproject_ai_tandem_partner/: base_state.py  models.py  teamproject_ai_tandem_partner.py
teamproject_ai_tandem_partner/components/: __init__.py  base_layout.py  chat_box.py  chat_window.py  error_box.py  login_box.py  settings_box.py  settings_window.py  sidebar.py
teamproject_ai_tandem_partner/pages/: __init__.py  chat.py  home.py  login.py  profile.py  registration.py  (+2 more)
tests/: generated_ui_test.py  parser_test.py  test_account_emails.py  test_app_settings.py  test_beta_ai_diagnosis_policy.py  test_example.py  test_mail.py
(+135 files in other folders)
