[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"


[project]
name = "aitutor"
version = "0.1.0"
description = "AI tutoring tool for interactive learning"
authors = [
    {name = "AL Group", email = "georg.martius@uni-tuebingen.de"},
]

requires-python = ">=3.13"
dependencies = [
    "reflex==0.6.4",
    "pytest",
    "passlib",
    "alembic",
    "python-decouple",
    "openai",
    "pdfplumber",
    "dotenv",
    "bcrypt"
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.11.4",
]


[tool.ruff]
lint.select = [
    "E",
    "F",
    "B",  # bugbear
    "D100", "D101", "D102", "D103",  # Complain about missing docstrings
]
extend-exclude = ["alembic"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]  # don't enforce docstrings in test files


[tool.mypy]
exclude = ["build", "alembic"]
ignore_missing_imports = true #Temporary fix so mypy checks pass, might consider adding py.typed marker or stub files in the future.

[tool.setuptools.packages.find]
include = ["aitutor*"]
exclude = ["assets"]

[tool.black]
extend-exclude = "alembic"


