[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"


[project]
name = "aitutor"
version = "0.1.0"
description = "AI tutoring tool for interactive learning"
authors = [
    {name = "AL Group", email = "georg.martius@uni-tuebingen.de"},
]

requires-python = ">=3.13"
dependencies = [
    "reflex==0.7.5",
    "pytest",
    "passlib",
    "python-decouple",
    "openai",
    "pdfplumber",
    "dotenv",
    "bcrypt",
    "reflex-local-auth>=0.3.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.399",
    "pytest>=8.3.5",
    "ruff>=0.11.4",
    "types-passlib>=1.7.7.20250408",
]
lsp = [
    "pylsp-rope>=0.1.17",
    "python-lsp-ruff>=2.2.2",
    "python-lsp-server>=1.12.2",
]

[tool.setuptools.packages.find]
include = ["aitutor*"]
exclude = ["assets"]


[tool.ruff]
lint.select = [
    "E",
    "F",
    "B",  # bugbear
    "D100", "D101", "D102", "D103",  # Complain about missing docstrings
]
extend-exclude = ["alembic"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]  # don't enforce docstrings in test files


[tool.pyright]
# first three entries are the default excludes that get overwritten when using that
# setting.
exclude = ["**/node_modules", "**/__pycache__", "**/.*", "build", "alembic"]
